# exFlow

./: .gitignore  Cargo.toml  README.md  build_all.sh  build_runtime.sh  build_scheduler.sh  build_services.sh  exflow.db  exflow.db-shm  exflow.db-wal  run_runtime.sh  run_runtime_cli.sh  run_runtime_web.sh  run_scheduler.sh  run_service_web.sh  test_exflow_runtime.sh  test_runtime_web.sh
db/: docker-compose.yml
db_scripts/: db.sql
src/: main_exflow_runtime.rs  main_exflow_scheduler.rs  main_exflow_service.rs
src/mod_azure/: azure.rs  entities.rs  mod.rs
src/mod_cores/: errors.rs  utils.rs  web_data.rs
src/mod_db/: db.rs  db_exflow.rs  db_exflow_jobs.rs  db_exflow_runtime.rs  db_service.rs  entities.rs  mod.rs
src/mod_ex_flow_utils/: entities.rs  errors.rs  mod.rs  uri.rs  uri_endpoints.rs  utils.rs  utils_ex_flow.rs
src/mod_runtime/: adf_runtime.rs  entities.rs  interface_runtime.rs  mod.rs  runtime_api.rs  runtime_cli.rs
src/mod_runtime_api/: entities.rs  errors.rs  mod.rs  runtime_api.rs
src/mod_runtime_cli/: adf_runtime.rs  interface_runtime.rs  mod.rs  runtime_cli.rs
src/mod_service/: mod.rs  service_api.rs  service_cli.rs
src/mod_service_api/: entities.rs  mod.rs  service_api.rs
src/mod_service_cli/: mod.rs  service_cli.rs
src/mod_utils/: errors.rs  mod.rs  uri_endpoints.rs  utils.rs  utils_exflow.rs  web_data.rs
