[package]
name = "exFlow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
azure_core = { version = "0.16" , optional = true }
azure_identity = { version = "0.16" , optional = true }
serde = {version = "1.0" , optional = true}
serde_qs = {version = "0.12" , optional = true}
serde_urlencoded = { version = "0.7" , optional = true}

pretty_env_logger = "0.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4"
reqwest = {version = "0.11", features = ["rustls-tls","json"]}
serde_json = "1.0"
http = "0.2"
actix-web = "4.4"
clap = { version = "4.4" , features = ["derive"]}


[features]
exflow_runtime_required = ["azure_core",
                            "azure_identity",
                            "serde",
                            "serde_qs",
                            "serde_urlencoded"]

[[bin]]
name = "exflow_runtime"
path = "src/main_exflow_runtime.rs"
required-features = ["exflow_runtime_required"]


[[bin]]
name = "exflow_service"
path = "src/main_exflow_service.rs"
