[package]
name = "exFlow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
azure_core = { version = "0.16" , optional = true }
azure_identity = { version = "0.16" , optional = true }
serde = {version = "1.0" , optional = true}
serde_qs = {version = "0.12" , optional = true}
serde_urlencoded = { version = "0.7" , optional = true}
clokwerk = { version = "0.4" , optional = true}
tiberius = { version = "0.12" , default-features = false , features = ["tds73","rustls","chrono","time","winauth","sql-browser-tokio"], optional = true}
sysinfo = {version = "0.29" , optional = true}
local-ip-address = { version = "0.5",optional= true }

pretty_env_logger = "0.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4"
reqwest = {version = "0.11", features = ["rustls-tls","json"]}
serde_json = "1.0"
http = "0.2"
actix-web = "4.4"
clap = { version = "4.4" , features = ["derive","color"]}
async-std = "1.12"
chrono = "0.4"

opentelemetry-application-insights = {version = "0.27" ,default-features = false , features = ["reqwest-client-rustls","metrics"]}
opentelemetry = {version = "0.20", features = ["rt-tokio","metrics"]}
actix-web-opentelemetry = "0.15"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.21"
tracing-subscriber = {version = "0.3"}
tracing-actix-web = "0.7"
derive_more = "0.99"
tokio-util = "0.7"




[features]
exflow_runtime_required = ["azure_core",
                            "azure_identity",
                            "serde",
                            "serde_qs",
                            "serde_urlencoded",
                            "sysinfo",
                            "local-ip-address"
]

exflow_scheduler_required = ["clokwerk",
    "azure_core",
    "azure_identity",
    "serde",
    "serde_qs",
    "serde_urlencoded",
    "tiberius",
    "local-ip-address",
    "sysinfo"
]

exflow_service_required = [
    "azure_core",
    "azure_identity",
    "serde",
    "serde_qs",
    "serde_urlencoded",
    "tiberius",
    "sysinfo",
    "local-ip-address"]

[[bin]]
name = "exflow_runtime"
path = "src/main_exflow_runtime.rs"
required-features = ["exflow_runtime_required"]


[[bin]]
name = "exflow_service"
path = "src/main_exflow_service.rs"

[[bin]]
name = "exflow_scheduler"
path = "src/main_exflow_scheduler.rs"
required-features = ["exflow_scheduler_required"]
